
				Adium Version History
				-----------------------

Version 1.5.11 (XX/YY/ZZZZ)
 * Fixed a crash upon file transfer completion on Bonjour. (Quentin Les) (#16038, #16182)
 * Fixed a problem with signing in to Twitter and updating the timeline on 10.10. (#16882)
 * Fixed a problem with signing in to Yahoo!. (reanimus) (#16678)
 * Google Talk now authenticates using OAuth2, making logging in simpler when using two-factor authentication and more secure. (#16161)


Version 1.5.10 (05/19/2014)
 * Updated libpurple to 2.10.9, fixing many security issues.
 * Updated the PSMTabBarControl framework, used in Adium for tabs:
   * Fixed an issue which occurred when dragging a conversation window into an existing tabbed conversation window and which caused Adium to become unresponsive. (#16281)
   * Fixed an issue causing tabs/windows to disappear when being dragged. (#15414, #15518,  #15822, #16305)
   * Fixed an issue where tabs would disappear after several hours. (#16262)
   * Fixed visual glitches on bottom tabs seen on Retina Displays. (#16074)
   * Tabs now use all the space in the tab bar. (#7690)
   * Fixed tabs not being spoken by VoiceOver. (#16088)
 * Fixed a problem that could cause high CPU load when a connection is lost. (#16431)
 * Fixed a bug that can cause disconnects when using a Retina Mac with an external screen. (Johannes Loepelmann) (#16552)
 * Fixed an issue causing to Adium to connect accounts during PowerNap. (Mayur Pawashe) (#16249)
 * Fixed idle checks to no longer use the proximity sensor of modern Macs. (Christopher Loessl)
 * Fixed dates in the chat log viewer not showing up for very old logs (2006 and earlier). (#16554)
 * Security: Enabled a number of TLS ciphers using SHA256.
 * Fixed connecting to servers with outdated TLS support using the unofficial SIPE plugin. (Michael Lamb) (#16550) The fix only applies to OS X 10.9, one for OS X 10.8.5 should follow.
 * Fixed vertical placement of the unread count in tabs. (#16318)