@@ -44,7 +44,10 @@
 					<td></td>
 				</tr>
 			</table>
-			<p></p>
+			<p>Further information:</p>
+			<ul>
+				<li><a href="ServiceInformation-TwitterSupport.html">Twitter in Adium</a></li>
+			</ul>
 		</div>
 	</div>
 	<div class="taskboxline">
